- Fixed layout bugs

--- a/res/less/ellipsis.less
+++ b/res/less/ellipsis.less
@@ -5,7 +5,7 @@
 @line-height: 21px;
 @line-height-md: 18px;
 @line-height-sm: 16px;
-@line-height-xs: 16px;
+@line-height-xs: 12px;
 
 @line-margin: 5px;
 @line-margin-md: 4px;
@@ -15,7 +15,7 @@
 @line-font-size: 14px;
 @line-font-size-md: 12px;
 @line-font-size-sm: 11px;
-@line-font-size-xs: 11px;
+@line-font-size-xs: 10px;
 
 .ellipsis {
     overflow: hidden;
@@ -185,7 +185,7 @@
     }
 }
 
-.dataobject-sx {
+.dataobject-xs {
     .ellipsis {
         height: (@line-height-xs * @line-count * 1.1);
         line-height: @line-height-xs;
